Fix navbar overlapping

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -53,3 +53,7 @@ h2 {
   font-size: 4em;
   font-weight: 500;
 }
+
+.bible-content{
+  margin-left: 10em;
+}
