--- a/web/src/navbar/resources/style/navbar.css
+++ b/web/src/navbar/resources/style/navbar.css
@@ -2,16 +2,18 @@
 
 .navbar{
     height: 100%; /* 100% Full-height */
+    width: 10em;
     position: fixed; /* Stay in place */
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
     left: 0;
+    display: block;
     background-color: #1e1e1e; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
 }
 
 .navbar ul{
-    padding: 13px; 
+    padding: 2em; 
 }
 
 .navbar ul li {
@@ -22,7 +24,7 @@
 }
 
 .nav-bar-item{
-    width: 45px;
+    width: 5.8em;
     padding-top: 20px;
     opacity: .4;
     -ms-filter: "alpha(Opacity=40)";
